# domain_stalker

./: .gitignore  Cargo.toml  Makefile.toml  README.md
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/menu/: mod.rs  parser.rs  utils.rs
app/src/menu/handlers/: exec.rs  help.rs  list.rs  mod.rs  set.rs
plugins/core/: Cargo.toml
plugins/core/src/: lib.rs
plugins/dns_query/: Cargo.toml
plugins/dns_query/src/: lib.rs
plugins/dns_query/src/answer/: a.rs  aaaa.rs  cname.rs  mod.rs  mx.rs  ns.rs  soa.rs  txt.rs
