[package]
name = "domain_stalker"
version = "0.1.0"
authors = ["fwxs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
plugins_core = { path = "../plugins/core" }
console = "0.14.1"
cli-table = "0.4"